finalizacion curso lector qr

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
    <application
         android:label="qr_reader"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDr-mxcs6tJeQWzLDQHLzefGqB79Clbj0I"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
