--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   path_provider: ^2.0.2
   sqflite: ^2.0.0+3
+  url_launcher: ^6.0.9
+  google_maps_flutter: ^2.0.6
 
 dev_dependencies:
   flutter_test:
